Migrated from heurist-network

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,56 @@
 ---
-title: Introduction
-description: 'Welcome to the home of your new documentation'
+title: Introducing Heurist
+description: 'Welcome to the home of Heurist Ai documentation'
 ---
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light.svg"
+  src="/images/hero/light.png"
   alt="Hero Light"
 />
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.svg"
+  src="/images/hero/dark.png"
   alt="Hero Dark"
 />
 
-## Setting up
+## Introducing Heurist
 
-The first step to world-class documentation is setting up your editing environments.
+Heurist is a decentralized AI-as-a-Service cloud. We aggregate compute resources from individual GPU owners and data centers to provide serverless AI services. Heurist’s API-first infrastructure elinimates the need for developers to manage GPU machines, and enables cost-efficient, censorship-free AI integration with APIs.
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+### Key Offerings
 
-## Make it yours
+- **Elasticity in Compute Resources and in Mining Emission**: Heurist dynamically scales compute resources to meet fluctuating demand, and adopts an adaptive token emission mechanism that responds to network activity. Elasticity in these two aspects ensures optimal resource utilization and economic stability.
+
+- **Serverless AI-as-a-Service**: Heurist abstracts away the complexities of hardware management. Deploy workloads and access AI services through intuitive APIs and SDKs with a few lines of code, saving the hassle of managing GPU machines.
+
+- **Alignment-Centric Economics (ACE)**: Our economic model aligns all participants towards shared goals: expanding compute resources, optimizing utilization, advancing AI models, and preserving long-term protocol value. Heurist Token is tightly integrated into every interaction in the ecosystem.
+
+- **Web3-Native AI Ecosystem**: By supporting and incubating AI applications targeted to crypto users, such as finetuned models for Web3 IPs, onchain/offchain agents with crypto knowledge, AIGC NFTs Heurist brings cutting-edge AI to the crypto world.
+
+#### About the name: Heurist (pronunciation: hyoo-ri-st)
+
+Heuristics are part of how the human brain evolved and is wired, allowing individuals to quickly reach reasonable conclusions or solutions to complex problems.
+
+
+
+## Connect to Heurist
 
 Update your docs to your brand and add valuable content for the best user conversion.
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="Heurist Website"
+    icon="globe"
+    href="https://www.heurist.ai/"
   >
-    Customize your docs to your company's colors and brands
+    Please visit the home page of Heurist for more information
   </Card>
   <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    title="Contact us"
+    icon="envelope"
+    href="mailto:team@heurist.xyz"
   >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
+    Preview your changes before you push to make sure they're perfect
   </Card>
 </CardGroup>
