--- a/protocol-overview/contract-addresses.mdx
+++ b/protocol-overview/contract-addresses.mdx
@@ -4,63 +4,22 @@ title: "Contract Addresses"
 
 # Core Contracts
 
-<CardGroup cols={2}>
-  <Card
-    title="HEU - ETH Mainnet"
-    icon="link"
-    href=""
-  >
-    {/* Empty link, does nothing when clicked */}
-  </Card>
-  <Card
-    title="StHEU - ETH Mainnet"
-    icon="link"
-    href=""
-  >
-    {/* Empty link, does nothing when clicked */}
-  </Card>
-  <Card
-    title="HEU - ZKsync Era"
-    icon="link"
-    href=""
-  >
-    {/* Empty link, does nothing when clicked */}
-  </Card>
-  <Card
-    title="StHEU - ZKsync Era"
-    icon="link"
-    href=""
-  >
-    {/* Empty link, does nothing when clicked */}
-  </Card>
-</CardGroup>
----
+| Name   | Network     | Link |
+|--------|-------------|------|
+| HEU    | ETH Mainnet |      |
+| StHEU  | ETH Mainnet |      |
+| HEU    | ZKsync Era  |      |
+| StHEU  | ZKsync Era  |      |
+
 # Mining Contracts
 
-<CardGroup cols={1}>
-  <Card
-    title="HeuristMinerSBT"
-    icon="link"
-    href="https://sepolia.explorer.zksync.io/address/0x7798de1aE119b76037299F9B063e39760D530C10#contract"
-  >
-    HeuristMinerSBT Contract on Sepolia
-  </Card>
-</CardGroup>
----
-# zkImagine & Create-to-Earn Contracts
-<CardGroup cols={2}>
-  <Card
-    title="zkImagine"
-    icon="link"
-    href="https://explorer.zksync.io/address/0x5c63369e3f04018a0c32559661e025f051fb071e"
-  >
-    zkImagine Contract
-  </Card>
-  <Card
-    title="ChestRewards"
-    icon="link"
-    href="https://explorer.zksync.io/address/0x1379E87b0fFdD43839C298E5Af047D2ccbbFea6F"
-  >
-    ChestRewards Contract
-  </Card>
-</CardGroup>
+| Name            | Link                                                                                                                                |
+|-----------------|-------------------------------------------------------------------------------------------------------------------------------------|
+| HeuristMinerSBT | [https://sepolia.explorer.zksync.io/address/0x7798de1aE119b76037299F9B063e39760D530C10#contract](https://sepolia.explorer.zksync.io/address/0x7798de1aE119b76037299F9B063e39760D530C10#contract) |
+
+# zkImagine and Create-to-Earn Contracts
+
+| Name        | Link                                                                                                                                |
+|-------------|-------------------------------------------------------------------------------------------------------------------------------------|
+| zkImagine   | [https://explorer.zksync.io/address/0x5c63369e3f04018a0c32559661e025f051fb071e](https://explorer.zksync.io/address/0x5c63369e3f04018a0c32559661e025f051fb071e) |
+| ChestRewards | [https://explorer.zksync.io/address/0x1379E87b0fFdD43839C298E5Af047D2ccbbFea6F](https://explorer.zksync.io/address/0x1379E87b0fFdD43839C298E5Af047D2ccbbFea6F) |
