--- a/protocol-overview/litepaper.mdx
+++ b/protocol-overview/litepaper.mdx
@@ -55,7 +55,7 @@ To demonstrate the power of Heurist's serverless GPU DePIN, Heurist team has bui
   </Card>
   <Card
     title="Heurist Search"
-    icon="search"
+    icon="magnifying-glass"
     href="https://search.heurist.ai/"
   >
     AI-powered search engine for efficient results
