--- a/protocol-overview/tokenomics.mdx
+++ b/protocol-overview/tokenomics.mdx
@@ -54,25 +54,25 @@ HEU (pronounced as "hue") is the native token of Heurist Protocol. The maximum s
 
 ### FAQ
 
-1. Where will the token be traded?
+* Where will the token be traded?
 
 DEX: Uniswap V3 on Ethereum mainnet and ZKsync
 
 CEX: To be announced
 
-1. What is the marketing reserve?
+* What is the marketing reserve?
 
 It is for exchange listing, airdrop to the community, KOL marketing, giveaways, etc. Not going to be liquid all at once.
 
-1. What's the plan for Imaginaries NFT airdrop?
+* What's the plan for Imaginaries NFT airdrop?
 
 We will continue to give away NFTs to the top community contributors and campaign winners (See [Imaginaries NFT](/ecosystem/imaginaries-nft)). The above distribution sheet is based on a projection of 400 liquid NFTs at TGE. The NFT giveaway will continue after the TGE.
 
-1. How to participate in IDO/IEO/public sale?
+* How to participate in IDO/IEO/public sale?
 
 There will be no public sale.
 
-1. What's the initial price?
+* What's the initial price?
 
 The initial price will be determined by the average trading price of Imaginaries NFT over a period of time before TGE. This ensures a fair pre-market price discovery.
 
