--- a/protocol-overview/mining/season-1-ended.mdx
+++ b/protocol-overview/mining/season-1-ended.mdx
@@ -36,7 +36,7 @@ description: "We allocate 5% of total Heurist Token supply for season 1 mining r
 * Over 500 million text generation requests processed
 
 <img 
-    src="\images\protocol-overview\mining.png" 
+    src="https://raw.githubusercontent.com/wjw12/docs/refs/heads/main/images/protocol-overview/mining.jpg" 
     alt="mining_highlight"
     style={{ width: '100%', display: 'block', margin: '0 auto' }}
   />
