separate developer guide tab

--- a/guides/miner-guide.mdx
+++ b/guides/miner-guide.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Overview"
+title: "Miner Guide"
 ---
 
 ## Official miner software: [https://github.com/heurist-network/miner-release](https://github.com/heurist-network/miner-release)
