--- a/introduction.mdx
+++ b/introduction.mdx
@@ -30,27 +30,21 @@ Heurist is a decentralized AI-as-a-Service cloud. We aggregate compute resources
 
 #### About the name: Heurist (pronunciation: hyoo-ri-st)
 
-Heuristics are part of how the human brain evolved and is wired, allowing individuals to quickly reach reasonable conclusions or solutions to complex problems.
-
-
-
-## Connect to Heurist
-
-Update your docs to your brand and add valuable content for the best user conversion.
+> Heuristics are part of how the human brain evolved and is wired, allowing individuals to quickly reach reasonable conclusions or solutions to complex problems.
 
 <CardGroup cols={2}>
   <Card
-    title="Heurist Website"
+    title="Heurist Homepage"
     icon="globe"
     href="https://www.heurist.ai/"
   >
-    Please visit the home page of Heurist for more information
+    Visit the homepage of Heurist for more information
   </Card>
   <Card
     title="Contact us"
     icon="envelope"
     href="mailto:team@heurist.xyz"
   >
-    Preview your changes before you push to make sure they're perfect
+    Send an email to team@heurist.xyz for inquiries
   </Card>
 </CardGroup>
