--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,5 @@
 ---
-title: Introducing Heurist
-description: 'Welcome to the home of Heurist Ai documentation'
+title: "Welcome to Heurist"
 ---
 
 <img
