misc improve and fix

--- a/ecosystem/imaginaries-nft.mdx
+++ b/ecosystem/imaginaries-nft.mdx
@@ -43,18 +43,11 @@ Heurist team makes the final call on the giveaway rules, which are flexible and 
 
 ### Links
 
-<CardGroup cols={2}>
+<CardGroup cols={1}>
   <Card
-    title="OpenSea"
-    icon="link"
-    href="https://opensea.io/collection/heurist-imaginaries"
-  >
-  </Card>
-  <Card
-    title="Blur"
+    title="Buy Heurist Imaginaries on Blur"
     icon="link"
     href="https://blur.io/collection/heurist-imaginaries"
   >
   </Card>
-
 </CardGroup>
