--- a/ecosystem/zkimagine-nft.mdx
+++ b/ecosystem/zkimagine-nft.mdx
@@ -1,6 +1,6 @@
 ---
 title: "zkImagine NFT"
-description: "Heurist  is an AI image generator, powered by decentralized GPUs in Heurist network. We curate the best image generation models and offer them for free. Users can generate images of varied visual styles, themes, characters with text prompts."
+description: "Heurist Imagine is an AI image generator, powered by decentralized GPUs in Heurist network. We curate the best image generation models and offer them for free. Users can generate images of varied visual styles, themes, characters with text prompts."
 ---
 
 [zkImagine](https://element.market/collections/zkimagine?search%5Btoggles%5D%5B0%5D=ALL) is a NFT collection on ZKsync Era mainnet. All images are generated with Heurist Imagine. The supply is unlimited. Creators can launch sub-collections from the zkImagine collection, and turn your creativity into your customized NFT collection.
