--- a/protocol-overview/branding-assets.mdx
+++ b/protocol-overview/branding-assets.mdx
@@ -1,17 +1,13 @@
 ---
 title: "Branding Assets"
-description: "21KB"
 ---
-
-### Branding Assets
-
-Below are the available branding assets. Click on each card to open the image in a new tab.
 
 <CardGroup cols={2}>
   <Card
     title="Logo with Text"
     icon="image"
     href="../images/branding/logo-with-text.png"
+    target="_blank"
   >
     Logo with Text
   </Card>
@@ -19,6 +15,7 @@ Below are the available branding assets. Click on each card to open the image in
     title="Logo Lines"
     icon="image"
     href="../images/branding/logo-lines.png"
+    target="_blank"
   >
     Logo Lines
   </Card>
@@ -26,6 +23,7 @@ Below are the available branding assets. Click on each card to open the image in
     title="Logo Light Grey"
     icon="image"
     href="../images/branding/logo-light-grey.png"
+    target="_blank"
   >
     Logo Light Grey
   </Card>
@@ -33,6 +31,7 @@ Below are the available branding assets. Click on each card to open the image in
     title="Logo Black"
     icon="image"
     href="../images/branding/logo-black.png"
+    target="_blank"
   >
     Logo Black
   </Card>
@@ -40,6 +39,7 @@ Below are the available branding assets. Click on each card to open the image in
     title="Logo with Text White (No BG)"
     icon="image"
     href="../images/branding/logo-with-text.png"
+    target="_blank"
   >
     Logo with Text White (No BG)
   </Card>
@@ -47,6 +47,7 @@ Below are the available branding assets. Click on each card to open the image in
     title="Logo White (No Background)"
     icon="image"
     href="../images/branding/logo-with-text.png"
+    target="_blank"
   >
     Logo White (No Background)
   </Card>
