--- a/protocol-overview/litepaper.mdx
+++ b/protocol-overview/litepaper.mdx
@@ -44,28 +44,28 @@ To demonstrate the power of Heurist's serverless GPU DePIN, Heurist team has bui
     icon="image"
     href="https://imagine.heurist.ai/"
   >
-    Image generator supporting Stable Diffusion and Flux
+    Image generator supporting a variety of finetuned Stable Diffusion and Flux models
   </Card>
   <Card
     title="Pondera"
     icon="comment"
     href="https://pondera.heurist.ai/"
   >
-    AI chat assistant for a variety of tasks
+    AI chat assistant
   </Card>
   <Card
     title="Heurist Search"
     icon="magnifying-glass"
     href="https://search.heurist.ai/"
   >
-    AI-powered search engine for efficient results
+    AI-powered search engine
   </Card>
   <Card
     title="LLM Gateway"
     icon="code"
     href="/developer/heurist-llm-gateway"
   >
-    OpenAI-compatible API service for integration
+    OpenAI-compatible API endpoint service
   </Card>
   <Card
     title="Babel Discord Bot"
