--- a/protocol-overview/mining/season-2.mdx
+++ b/protocol-overview/mining/season-2.mdx
@@ -37,5 +37,4 @@ We take weekly snapshots. This means Waifu and Llama points in Season 2 will be 
 
 ## Token Claim Timeline
 
-Season 2 rewards will be claimable when (1) Heurist ZK Chain goes live (2) 3 months after TGE, whichever comes first.
-
+Season 2 rewards will be claimable 3 months after TGE.
