added lazy loading for GIF

--- a/protocol-overview/litepaper.mdx
+++ b/protocol-overview/litepaper.mdx
@@ -161,7 +161,8 @@ Heurist's economic structure is fundamentally built on the principle of alignmen
 
 <img 
     src="..\images\protocol-overview\protocol_emission.gif" 
-    alt="protocol_emission"
+    alt="protocol_emission"  
+    loading="lazy"
     style={{ width: '80%', display: 'block', margin: '0 auto' }}
   />
 
@@ -170,6 +171,7 @@ Heurist's economic structure is fundamentally built on the principle of alignmen
 
 <img 
     src="..\images\protocol-overview\voting_compute_node.gif" 
+    loading="lazy"
     alt="voting_compute_node"
     style={{ width: '80%', display: 'block', margin: '0 auto' }}
   />
@@ -188,6 +190,7 @@ Heurist's economic structure is fundamentally built on the principle of alignmen
 <img 
     src="..\images\protocol-overview\voting_pods.gif" 
     alt="voting_pods"
+    loading="lazy"
     style={{ width: '80%', display: 'block', margin: '0 auto' }}
   />
 
