updated branding assets

--- a/protocol-overview/branding-assets.mdx
+++ b/protocol-overview/branding-assets.mdx
@@ -4,33 +4,33 @@ title: "Branding Assets"
 
 <CardGroup cols={2}>
   <Card
-    title="Logo with Text"
+    title="Logo with Black Text"
     icon="image"
-    href="../images/branding/logo-with-text.png"
+    href="../images/branding/Logo-with-text-black.svg"
     target="_blank"
   >
     Logo with Text
   </Card>
   <Card
-    title="Logo Lines"
+    title="Logo with White Text"
     icon="image"
-    href="../images/branding/logo-lines.png"
+    href="../images/branding/Logo-with-text-white.svg"
     target="_blank"
   >
     Logo Lines
   </Card>
   <Card
-    title="Logo Light Grey"
+    title="Logo Black"
     icon="image"
-    href="../images/branding/logo-light-grey.png"
+    href="../images/branding/Logo-Lines-Black.svg"
     target="_blank"
   >
     Logo Light Grey
   </Card>
   <Card
-    title="Logo Black"
+    title="Logo White"
     icon="image"
-    href="../images/branding/logo-black.png"
+    href="../images/branding/Logo-Lines-White.svg"
     target="_blank"
   >
     Logo Black
@@ -38,17 +38,17 @@ title: "Branding Assets"
   <Card
     title="Logo with Text White (No BG)"
     icon="image"
-    href="../images/branding/logo-with-text.png"
+    href="../images/branding/Logo-with-text-white-no-background.svg"
     target="_blank"
   >
-    Logo with Text White (No BG)
+    Logo with Text White (No Background)
   </Card>
   <Card
-    title="Logo White (No Background)"
+    title="Logo with Text Black (No BG)"
     icon="image"
-    href="../images/branding/logo-with-text.png"
+    href="../images/branding/Logo-with-text-black-no-background.svg"
     target="_blank"
   >
-    Logo White (No Background)
+    Logo with Text Black (No Background)
   </Card>
 </CardGroup>
