branding asset naming conv fix

--- a/protocol-overview/branding-assets.mdx
+++ b/protocol-overview/branding-assets.mdx
@@ -9,6 +9,7 @@ title: "Branding Assets"
     href="../images/branding/Logo-with-text-black.svg"
     target="_blank"
   >
+    Logo with Text
   </Card>
   <Card
     title="Logo with White Text"
@@ -16,6 +17,7 @@ title: "Branding Assets"
     href="../images/branding/Logo-with-text-white.svg"
     target="_blank"
   >
+    Logo Lines
   </Card>
   <Card
     title="Logo Black"
@@ -23,6 +25,7 @@ title: "Branding Assets"
     href="../images/branding/Logo-Lines-Black.svg"
     target="_blank"
   >
+    Logo Black 
   </Card>
   <Card
     title="Logo White"
@@ -30,6 +33,7 @@ title: "Branding Assets"
     href="../images/branding/Logo-Lines-White.svg"
     target="_blank"
   >
+    Logo White
   </Card>
   <Card
     title="Logo with Text White (No BG)"
@@ -37,6 +41,7 @@ title: "Branding Assets"
     href="../images/branding/Logo-with-text-white-no-background.svg"
     target="_blank"
   >
+    Logo with Text White (No Background)
   </Card>
   <Card
     title="Logo with Text Black (No BG)"
@@ -44,5 +49,6 @@ title: "Branding Assets"
     href="../images/branding/Logo-with-text-black-no-background.svg"
     target="_blank"
   >
+    Logo with Text Black (No Background)
   </Card>
 </CardGroup>
