--- a/protocol-overview/branding-assets.mdx
+++ b/protocol-overview/branding-assets.mdx
@@ -9,7 +9,7 @@ title: "Branding Assets"
     href="../images/branding/Logo-with-text-black.svg"
     target="_blank"
   >
-    Logo with Text
+    Logo with Black Text
   </Card>
   <Card
     title="Logo with White Text"
@@ -17,7 +17,7 @@ title: "Branding Assets"
     href="../images/branding/Logo-with-text-white.svg"
     target="_blank"
   >
-    Logo Lines
+    Logo with White Text
   </Card>
   <Card
     title="Logo Black"
