--- a/dev-guide/supported-models.mdx
+++ b/dev-guide/supported-models.mdx
@@ -31,6 +31,8 @@ You can use the following model name as `model_id` in Heurist API/SDK.
 
   * `theia-llama-3.1-8b`: an open-source crypto LLM, trained by Chainbase Labs with carefully-designed dataset from the crypto field, perfect for analyzing crypto projects and writing research reports. [Learn more about Theia](https://docs.chainbase.com/theia/World_model/welcome)
 
+  * `qwen/qwen-2.5-coder-32b-instruct`: Qwen2.5-Coder is the latest series of Code-Specific Qwen large language models (formerly known as CodeQwen)
+
 ### Image Generation Models
 
   * `HeuristLogo`: Flux LoRA that can generate the logo of Heurist. Trigger word: `Heuristai logo` or `hexagonal logo`.
