updated litepaper GIFs

--- a/protocol-overview/litepaper.mdx
+++ b/protocol-overview/litepaper.mdx
@@ -179,7 +179,8 @@ Heurist's economic structure is fundamentally built on the principle of alignmen
 3. **Revenue Share Between Compute Nodes and Pods**: When a user pays for compute resources hosting a pod, a portion of that payment is shared with the pod's deployer. This mechanism incentivizes the creation and hosting of high-demand pods (for example, popular open source AI models)
 
 <img 
-    src="..\images\protocol-overview\revenue_share_between_compute_node_and_pods.jpg" 
+    src="..\images\protocol-overview\animation_pods.gif" 
+    loading="lazy"
     alt="revenue_share_between_compute_node_and_pods"
     style={{ width: '80%', display: 'block', margin: '0 auto' }}
   />
@@ -197,7 +198,8 @@ Heurist's economic structure is fundamentally built on the principle of alignmen
 5. **Revenue Share Between Compute Nodes and Frontends**: When a user makes an on-chain payment through a frontend, the smart contract defines a revenue split between the compute provider and the frontend operator. Frontends can also refer compute requests to specific compute nodes.
 
 <img 
-    src="..\images\protocol-overview\revenue_share_between_compute_node_and_frontend.jpg" 
+    src="..\images\protocol-overview\animation_frontend.gif" 
+    loading="lazy"
     alt="revenue_share_between_compute_node_and_frontend"
     style={{ width: '80%', display: 'block', margin: '0 auto' }}
   />
