--- a/ecosystem/create-to-earn.mdx
+++ b/ecosystem/create-to-earn.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Create To Earn"
-description: "Welcome to Heurist's innovative Create-to-Earn campaign, where your creativity is rewarded with ZK Tokens! As a protocol recipient of 2.4M ZK Token airdrop, Heurist is dedicated to giving them away to super-charge community growth."
+description: "Welcome to Heurist's Create-to-Earn campaign, where your creativity is rewarded with ZK Tokens! As a protocol recipient of 2.4M ZK Token airdrop, Heurist is dedicated to giving them away to super-charge community growth."
 ---
 
 Join the campaign here: [https://imagine.heurist.ai/campaign](https://imagine.heurist.ai/campaign)
