--- a/dev-guide/reference/supported-models.mdx
+++ b/dev-guide/reference/supported-models.mdx
@@ -1,87 +1,226 @@
 ---
 title: "Supported Models"
-description: "A wide range of AI models are supported. Besides vanilla LLMs and image generation models, we provide fine-tuned models customized for crypto use cases and Web3-native IPs. We also provide model fine-tuning service and private model deployment."
+description: "Explore a wide range of AI models. We support models for large language tasks, image generation, and specific use cases like crypto and Web3. Custom fine-tuning and private deployments available."
 ---
 
-### Model List
-
-Most supported models are open source. [View public models here](https://github.com/heurist-network/heurist-models/blob/main/models.json)
-
-You can use the following model name as `model_id` in Heurist API/SDK.
+## Supported Models
 
 ### Large Language Models (LLMs)
 
-  * `mistralai/mixtral-8x22b-instruct`: state-of-the-art Sparse Mixture-of-Experts model featuring 8 experts and 22 billion parameters, optimized for instruction-following with strong performance in reasoning and multilingual capabilities.
+{/* Card Group: LLMs */}
+<CardGroup title="Large Language Models (LLMs)">
+  
+  <Card title="mistralai/mixtral-8x22b-instruct">
+    A sparse mixture-of-experts model with 22 billion parameters, optimized for multilingual instruction-following and complex reasoning.
+    **Key Features**: Multilingual, Complex Reasoning, Instruction Following
+  </Card>
 
-  * `mistralai/mixtral-8x7b-instruct`: a compact version of the Mixtral family, designed for efficient instruction-based interactions while maintaining a balance between performance and cost.
+  <Card title="mistralai/mixtral-8x7b-instruct">
+    A compact version of the Mixtral family, designed for efficient instruction-based interactions with a balance of performance and cost.
+    **Key Features**: Efficient, Instruction Focused, Cost-effective
+  </Card>
 
-  * `mistralai/mistral-7b-instruct`: excel in generating fast responses and highly cost-efficient.
+  <Card title="mistralai/mistral-7b-instruct">
+    A fast and cost-efficient model ideal for quick responses and general-purpose tasks.
+    **Key Features**: Speed, Cost-efficiency, General-purpose
+  </Card>
 
-  * `meta-llama/llama-3.1-405b-instruct`: the most advanced Llama model, perfect for high-level reasoning and complex task execution.
+  <Card title="meta-llama/llama-3.1-405b-instruct">
+    The most advanced Llama model, designed for high-level reasoning and task execution.
+    **Key Features**: High-level Reasoning, Task Execution
+  </Card>
 
-  * `meta-llama/llama-3-70b-instruct`: the most popular Llama model, suitable for diverse applications in conversational AI and reasoning.
+  <Card title="meta-llama/llama-3-70b-instruct">
+    A popular Llama model for conversational AI and reasoning tasks.
+    **Key Features**: Conversational AI, Reasoning
+  </Card>
 
-  * `nvidia/llama-3.1-nemotron-70b-instruct`: specialized version of the Llama model tailored by NVIDIA for complex instruction-following tasks, delivering high-quality, human-like responses across a variety of applications while leveraging advanced NVIDIA AI technologies for optimal performance and scalability.
+  <Card title="nvidia/llama-3.1-nemotron-70b-instruct">
+    A version of Llama enhanced by NVIDIA for instruction-following tasks with optimized performance and scalability.
+    **Key Features**: NVIDIA Enhanced, High-performance, Instruction Following
+  </Card>
 
-  * `openhermes-mixtral-8x7b-gptq`: a state of the art Mixtral fine-tune using the OpenHermes dataset. **Uncensored**
+  <Card title="openhermes-mixtral-8x7b-gptq">
+    Fine-tuned Mixtral model for specialized tasks using the OpenHermes dataset.
+    **Key Features**: Fine-tuned, Uncensored, Task-specific
+  </Card>
 
-  * `hermes-3-llama3.1-8b`: flagship Hermes LLM trained by Nous Research, with advanced agentic capabilities, enhanced roleplaying, reasoning, multi-turn conversation, long context coherence and agentic abilities. **Uncensored**. **Supports tool calling**
+  <Card title="hermes-3-llama3.1-8b">
+    A model with agentic abilities, ideal for roleplaying, reasoning, and multi-turn conversations.
+    **Key Features**: Agentic, Multi-turn Conversations, Tool Calling
+  </Card>
 
-  * `dolphin-2.9-llama3-8b`: an enhanced Llama3 8b model trained by Cognitive Computations equipped with a variety of instruction, conversational, and coding skills. We recommend using system prompt `The assistant is named Dolphin. A helpful and friendly AI assistant, Dolphin avoids discussing the system message unless directly asked about it.`. **Uncensored**.
+  <Card title="dolphin-2.9-llama3-8b">
+    A friendly assistant AI designed for coding and conversational tasks.
+    **Key Features**: Coding, Friendly Assistant, Task-oriented
+  </Card>
 
-  * `theia-llama-3.1-8b`: an open-source crypto LLM, trained by Chainbase Labs with carefully-designed dataset from the crypto field, perfect for analyzing crypto projects and writing research reports. [Learn more about Theia](https://docs.chainbase.com/theia/World_model/welcome)
+  <Card title="theia-llama-3.1-8b">
+    A crypto-focused Llama model trained on blockchain and financial data, ideal for analyzing crypto projects.
+    **Key Features**: Crypto-specific, Financial Data Analysis
+  </Card>
 
-  * `qwen/qwen-2.5-coder-32b-instruct`: Qwen2.5-Coder is the latest series of Code-Specific Qwen large language models (formerly known as CodeQwen)
+  <Card title="qwen/qwen-2.5-coder-32b-instruct">
+    A specialized model from the Qwen family for code-related tasks and instruction-following.
+    **Key Features**: Code Generation, Instruction Following, Specialized
+  </Card>
+
+</CardGroup>
 
 ### Image Generation Models
 
-  * `HeuristLogo`: Flux LoRA that can generate the logo of Heurist. Trigger word: `Heuristai logo` or `hexagonal logo`.
+{/* Card Group: Image Generation Models */}
+<CardGroup title="Image Generation Models">
+  
+  <Card title="HeuristLogo">
+    Flux LoRA model to generate the Heurist logo. Trigger word: `Heuristai logo` or `hexagonal logo`.
+  </Card>
 
-  * `FLUX.1-dev`: state-of-the-art open source image generation model that excels at a variety of image styles.
+  <Card title="FLUX.1-dev">
+    Open-source image generation model excelling at various artistic styles.
+    **Key Features**: Versatile, Artistic Styles, Open-source
+  </Card>
 
-  * `PepeXL`: SDXL LoRA that can generate the meme frog, Pepe. Trigger word: `Pepe`. Recommended words: `pepe_frog, meme, web comic` and add `cartoon` or `3d render`
+  <Card title="PepeXL">
+    Generate the Pepe meme using SDXL LoRA. Trigger words: `Pepe`, `pepe_frog`, `cartoon`, `3d render`.
+  </Card>
 
-  * `Zeek`: SDXL LoRA for ZKsync's mascot cat, Zeek. Trigger word: `zeek`. We recommend using `zeek wearing ...` or `zeek disguised as ...`
+  <Card title="Zeek">
+    Generate ZKsync's mascot Zeek with SDXL LoRA. Trigger word: `zeek`.
+  </Card>
 
-  * `MagusDevon`: SD1.5 LoRA for Magus Devon, the witch character of Forgotten Runes. Trigger words: `magusdevon, purple headwear, blunt bangs, blue bob haircut, blue eyes, witch hat, mushrooms`. These words are recommended `white robe, wide sleeves, blue trim, 1girl, red sash, boots, green footwear`
+  <Card title="MagusDevon">
+    Create the character of Magus Devon using SD1.5 LoRA. Trigger words: `magusdevon`, `purple headwear`, `mushrooms`.
+  </Card>
 
-  * `Aurora`: SD1.5 checkpoint for anime girls.
+  <Card title="Aurora">
+    SD1.5 model for generating anime girl images.
+    **Key Features**: Anime-style Girls, SD1.5
+  </Card>
 
-  * `AnimagineXL`: SDXL checkpoint for anime images. It can generate characters from well-known anime series.
+  <Card title="AnimagineXL">
+    SDXL model for anime character generation, supporting characters from popular series.
+    **Key Features**: Anime, Popular Characters, SDXL
+  </Card>
 
-  * `CyberRealisticXL`: SDXL checkpoint for realistic portraits.
+  <Card title="CyberRealisticXL">
+    SDXL model designed for realistic portraits and lifelike images.
+    **Key Features**: Realistic Portraits, SDXL
+  </Card>
 
-  * `BrainDance`: SD1.5 checkpoint for cartoon, anime and watercolor styles.
+  <Card title="BrainDance">
+    Generate cartoon, anime, and watercolor-style art with SD1.5.
+    **Key Features**: Cartoon, Anime, Watercolor
+  </Card>
 
-  * `BlazingDrive`: SD1.5 checkpoint for anime characters and scenes.
+  <Card title="BlazingDrive">
+    SD1.5 model for anime characters and scenes.
+    **Key Features**: Anime, Character Design
+  </Card>
 
-  * `YamersCartoonArcadia`: SD1.5 checkpoint for stylized 2D cartoon.
+  <Card title="YamersCartoonArcadia">
+    2D cartoon style model using SD1.5 for creating stylized images.
+    **Key Features**: 2D Cartoon, Stylized
+  </Card>
 
-  * `ArchitectureRealMix`: SD1.5 checkpoint for architectural design, landscape design, urban design, and interior design.
+  <Card title="ArchitectureRealMix">
+    SD1.5 model for architectural and landscape design.
+    **Key Features**: Architecture, Landscape, Design
+  </Card>
 
-  * `ArthemyComics`: SD1.5 checkpoint for fantasy cartoon images.
+  <Card title="ArthemyComics">
+    SD1.5 model for fantasy comic-style images.
+    **Key Features**: Fantasy Comics, SD1.5
+  </Card>
 
-  * `ArthemyReal`: SD1.5 checkpoint for fantasy-style and realistic-looking images.
+  <Card title="ArthemyReal">
+    SD1.5 model for fantasy-style and realistic-looking images.
+    **Key Features**: Fantasy-realistic Mix, SD1.5
+  </Card>
 
-  * `DreamShaperXL`: SDXL checkpoint that aims at doing everything well, including photos, art, anime, and manga styles.
+  <Card title="DreamShaperXL">
+    SDXL model for a wide range of styles, from photos to art, anime, and manga.
+    **Key Features**: Versatile, SDXL, Artistic
+  </Card>
 
-  * `AAMXLAnimeMix`: SDXL checkpoint for anime art and hentai.
+  <Card title="AAMXLAnimeMix">
+    SDXL model for generating anime art and hentai.
+    **Key Features**: Anime Art, Hentai, SDXL
+  </Card>
 
-  * `SDXLUnstableDiffusersV11`: SDXL checkpoint that enhances SDXL capabilities in creating vibrant arts, designs and photo-realistic images.
+  <Card title="SDXLUnstableDiffusersV11">
+    Enhances SDXL for vibrant, photo-realistic imagery.
+    **Key Features**: Vibrant, Photo-realistic, SDXL
+  </Card>
 
-  * `SDXL`: general-purpose image generation model developed by Stability AI.
+  <Card title="SDXL">
+    General-purpose image generation model by Stability AI.
+    **Key Features**: General-purpose, SDXL
+  </Card>
 
-#### Understanding Image Prompting
+</CardGroup>
 
-Stable Diffusion can benefit significantly from the use of comma-separated words and phrases in its prompts. Using commas effectively organizes prompts into distinct elements, enhancing clarity and aiding in the generation of more relevant images. For example, a prompt structured as "a cat, a dog, a tree" allows the model to interpret each item separately, which can lead to more accurate and coherent outputs compared to a continuous paragraph of description. This practice is especially useful for creators who want to ensure that specific attributes or elements are emphasized in their generated images. 
+### 🧠 **Understanding Image Prompting**
 
-Flux models work best if the prompt contains complete sentences depicting the image. Comma-separated tags are not recommended. This is a major difference between Stable Diffusion and Flux.
+Effective prompting is key to obtaining the best results from Heurist's image generation models. Depending on the model type, prompts should be structured differently to optimize the output.
 
-LoRA is a fine-tuning technique that makes a model learn a specific concept, style, item, or character. LoRA requires "trigger words" to function. For example, the phrase "Heuristai logo" must be included if you want the `HeuristLogo` model to generate a correct logo. Some LoRA models require multiple words or phrases to trigger effectively.
+---
 
-We recommend visiting [Heurist Imagine](https://imagine.heurist.ai) and see the example prompts of the models that you want to use.
+#### 📝 **Prompting Techniques: Stable Diffusion vs. Flux Models**
 
-### Need More Models?
+- **Stable Diffusion Models**:  
+  These models work best when prompts use **comma-separated words** or **tags** to describe distinct elements. The commas act as dividers between different objects, characteristics, or styles.
 
-Any image generation models from [Civitai](https://civitai.com/) and LLMs from [HuggingFace](https://huggingface.co/) can be supported upon request. If you're interested in hosting your models on Heurist, or if you want customized models that adapts to your specific use cases, please contact us at **team@heurist.xyz**
+  - **Example Prompt**: `"cat, dog, tree"`
+  - This clear separation of elements helps the model generate accurate and cohesive images.
 
+  - **Best Practice**: Use concise, clear keywords separated by commas to define key elements. This approach is particularly useful for artists looking to generate flexible, varied images.
+
+- **Flux Models**:  
+  Unlike Stable Diffusion, Flux models require **complete sentences** for best results. Using full descriptions rather than tags allows the model to better understand context and produce high-quality outputs.
+
+  - **Example Prompt**: `"A friendly cat sitting under a tree with sunlight filtering through the leaves"`
+  - This narrative-style prompt helps the model understand the overall scene and generate more realistic and detailed images.
+
+  - **Best Practice**: Provide descriptive sentences that convey the full context of the image. This allows the model to focus on generating cohesive, contextually-aware content.
+
+---
+
+#### 🔑 **LoRA Models and Trigger Words**
+
+LoRA (Low-Rank Adaptation) models are designed to recognize specific styles or features. These models rely on **trigger words** to generate content aligned with your desired concept.
+
+- **What are Trigger Words?**  
+  Trigger words are specific phrases that activate a particular behavior in the model. By using them, you ensure the output matches the intended style or theme.
+
+  - **Example Trigger Word**: `"Heuristai logo"`
+  - Including this phrase generates the Heurist logo.
+
+- **Best Practices**:  
+  Each LoRA model has its own set of trigger words, such as:
+  - `"Pepe"` for the Pepe meme character.
+  - `"magusdevon"` for the character from Forgotten Runes.
+  
+  To fine-tune the output, consider adding additional keywords related to the specific details of the character or style you're aiming for.
+
+---
+
+#### 📍 **Additional Tips for Optimizing Image Prompts**
+
+1. **Be Specific**: Instead of generic terms, describe the details clearly. E.g., use `"fluffy white cat with blue eyes"` instead of just `"cat"`.
+   
+2. **Provide Context**: For more dynamic or complex scenes, include context such as location or setting. E.g., `"A cat sitting on a rooftop at sunset"` gives the model more context to work with.
+
+3. **Model-Specific Keywords**: Some models have recommended trigger words or tags that help fine-tune the results. For instance:
+   - **PepeXL**: Use tags like `"pepe_frog"`, `"meme"`, and add `"cartoon"` or `"3d render"` for style specifics.
+   - **MagusDevon**: Keywords like `"purple headwear"`, `"blue bob haircut"`, `"mushrooms"`, etc., help define the character's appearance.
+
+---
+
+For more examples and detailed guidance on crafting image prompts, visit [Heurist Imagine](https://imagine.heurist.ai).
+
+---
+
+### 🚀 **Need More Models?**
+
+If you're looking for additional models or want to host custom ones on Heurist, we support models from platforms like [Civitai](https://civitai.com/) and [HuggingFace](https://huggingface.co/). Reach out to us for further support!
