some texts and structural changes

--- a/dev-guide/reference/integration-overview.mdx
+++ b/dev-guide/reference/integration-overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: "AI Integration Overview"
+title: "Integration Overview"
 description: "Heurist empowers developers to seamlessly integrate AI into applications with minimal setup. Forget about managing GPUs or CUDA drivers — our API/SDK abstracts the complexities, enabling you to focus on creating exceptional solutions."
 ---
 
@@ -13,8 +13,8 @@ Kickstart your development by exploring our [GitHub dev-examples repository](htt
 
 Heurist’s open-source frontends integrate with our LLM and Image Generation APIs, providing powerful templates and inspiration for your own projects. These apps showcase the potential of Heurist Protocol and serve as learning resources for the community.
 
-- 🎨 [**Heurist Imagine**](https://github.com/heurist-network/imagine) – AI-powered image generator supporting fine-tuned Stable Diffusion models and Flux integration.
-- 🧠 [**Pondera**](https://github.com/heurist-network/pondera) – AI chatbot offering experiences similar to ChatGPT or HuggingFace.
+- 🎨 [**Heurist Imagine**](https://github.com/heurist-network/imagine) – AI-powered image generator supporting fine-tuned Stable Diffusion models and Flux.
+- 🧠 [**Pondera**](https://github.com/heurist-network/pondera) – AI chatbot offering experiences similar to ChatGPT or HuggingFace Chat.
 - 🔍 **Heurist Search** – AI-enhanced search engine that leverages LLMs to summarize and synthesize internet search results.
 
   - [Frontend](https://github.com/heurist-network/gpt-search-web)
@@ -26,7 +26,7 @@ Heurist’s open-source frontends integrate with our LLM and Image Generation AP
 
 Ready to dive in? Simply fill out the [request form](https://dev-api-form.heurist.ai/) to receive your API key promptly.
 
-For individual developers, we offer **2,000–10,000 free credits** (equivalent to the same number of Heurist Tokens) to start experimenting with our AI services.
+For individual developers, we offer **2,000–10,000 free credits** (equivalent to the quota of the same amount of Heurist Tokens) to start experimenting with our AI services.
 
 Working on a Web3 project with live users or planning to launch in production? We offer **extended free access** to help scale your project.
 
@@ -37,3 +37,10 @@ Working on a Web3 project with live users or planning to launch in production? W
 - **Affordable**: Our open-source models are 60-95% more cost-effective than closed-source alternatives with similar capabilities.
 
 Elevate your products with our cutting-edge AI APIs. Start building today and see the future of AI integration with Heurist!
+
+### 🤝 Join the Developer Community
+
+If you have any questions or want to connect with other developers, join our community:
+
+- **Telegram**: Heurist Builders Group [https://t.me/heuristsupport](https://t.me/heuristsupport)
+- **Discord**: Dev-Chat Channel [https://discord.com/invite/heuristai](https://discord.com/invite/heuristai)
