--- a/dev-guide/reference/supported-models.mdx
+++ b/dev-guide/reference/supported-models.mdx
@@ -1,9 +1,13 @@
 ---
 title: "Supported Models"
-description: "Explore a wide range of AI models. We support models for large language tasks, image generation, and specific use cases like crypto and Web3. Custom fine-tuning and private deployments available."
+description: "Explore a wide range of AI models. We support models for natural language tasks, image generation, and domain-specific use cases in crypto and Web3. We also provide model fine-tuning service and private model deployment."
 ---
 
 ## Supported Models
+
+The following open source models are supported. [View the public model list here](https://github.com/heurist-network/heurist-models/blob/main/models.json)
+
+You can use the following model name as `model_id` in Heurist API/SDK.
 
 ### Large Language Models (LLMs)
 
