--- a/dev-guide/api-reference/getting-started.mdx
+++ b/dev-guide/api-reference/getting-started.mdx
@@ -4,14 +4,14 @@ description: "Getting Started with Heurist API"
 ---
 
 ## Install
-To get started with the Heurist SDK, you need to install it in your project. The SDK is available via npm, simply follow the instructions to set up the SDK and begin interacting with the Heurist AI API in no time.
+To get started with the Heurist SDK, you need to install it in your project. The SDK is available via npm, simply follow the instructions to set up the SDK and begin interacting with Heurist in no time.
 
 Recommend using `pnpm` for installation.
 
 <Tabs>
   <Tab title="npm">
     ```bash
-    npm i heuris
+    npm i heurist
     ```
   </Tab>
   <Tab title="pnpm">
@@ -33,16 +33,15 @@ Recommend using `pnpm` for installation.
 
 ## Authentication
 
-The Heurist API requires authentication using an API key. API keys are unique to your account and are used to verify your identity when making requests to the API. Keep in mind the following important points:
+The Heurist API requires authentication using an API key. API keys are used to verify your identity when making requests to the API. Keep in mind the following important points:
 
 - **Keep your API key secure!** Your API key is sensitive information and should not be shared with others. It must never be exposed in client-side code or in any publicly accessible location (e.g., browser code, repositories).
 - **Secure your key with backend services:** It’s recommended to store your API key in a secure location such as environment variables or key management services (KMS) on your backend server.
 
 ### Example Authentication Flow
-To authenticate your application, you will need to pass the API key to the Heurist SDK in your server-side code. Here’s how you can set up authentication in your application:
+To authenticate your application, you will need to pass the API key to the Heurist SDK in your code. Here’s how you can set up authentication:
 
 ## Usage
-
 
 ```typescript
 import Heurist from 'heurist'
