--- a/dev-guide/api-reference/introduction.mdx
+++ b/dev-guide/api-reference/introduction.mdx
@@ -1,15 +1,11 @@
 ---
 title: "Introduction"
-description: "Heurist SDK"
 ---
 
-# Heurist SDK
-
-The **Heurist SDK** is the official TypeScript library for seamlessly interacting with the Heurist AI API. This SDK provides an easy-to-use interface for integrating Heurist's powerful AI features into your TypeScript or JavaScript projects.
-
-It is designed to simplify API interactions, enabling developers to unlock AI capabilities without the need for complex setup.
+**Heurist SDK** is the official TypeScript library for seamlessly interacting with Heurist AI services. This SDK provides an easy-to-use interface for integrating Heurist's powerful AI features into your TypeScript or JavaScript projects.
 
 ## Key Features
-- Access Heurist’s REST API with minimal configuration
+- Access advanced AI features with minimal configuration
 - Built for TypeScript and JavaScript
 - Ready for integration into your applications or Web3 projects
+- Simplified payment process supporting crypto and fiat (Coming Soon)
